--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "styled-components": "^6.0.8",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.28"
   }
 }
