fix: install react-fast-marquee package

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.1",
     "sass": "^1.67.0",
     "styled-components": "^6.0.8",
     "typescript": "5.2.2",
