--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.1",
+    "react-hot-toast": "^2.4.1",
     "sass": "^1.67.0",
     "styled-components": "^6.0.8",
     "typescript": "5.2.2",
