--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "immer": "^10.0.3",
     "ityped": "^1.0.3",
     "next": "13.4.19",
     "react": "18.2.0",
