fix: streamline modal close handling and improve readability

--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
   "devDependencies": {
     "@types/ityped": "^1.0.1",
     "@types/styled-components": "^5.1.28"
+  },
+  "engines": {
+    "node": "24.x"
   }
 }
